# cfms_client_next

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
.github/agents/: README.md  architecture-core-systems.md  authentication-security.md  configuration-preferences.md  file-management-explorer.md  localization-i18n.md  ui-ux-development.md  websocket-communication.md
.github/workflows/: desktop-and-mobile-builds.yml
agents-pending/: README.md
docs/: CHANNEL_UPDATER.md  FileBrowserDialog.md  RELEASE_TYPE_DETECTION.md
scripts/: QUICKSTART.md  README.md  bump_version.py  demo_release_type.py  get_changelog_notes.py  get_channel_name.py  get_release_type.py  remove_pillow_dependency.py
src/: main.py
src/assets/: ASSETS_CREDITS.md
src/include/: conf_loader.py  constants.py  router.py
src/include/backend/event_handlers/: lockdown.py
src/include/classes/: changelog.py  client.py  config.py  datacls.py  frame.py  preferences.py  response.py  shared.py  twofa.py  version.py
src/include/classes/exceptions/: __init__.py  config.py  request.py  transmission.py
src/include/classes/services/: README.md  __init__.py  autoupdate.py  base.py  ca_update.py  download.py  example.py  favorites_validation.py  manager.py  server_stream.py  token_refresh.py
src/include/classes/ui/: enum.py
src/include/controllers/: base.py  connect.py  explorer.py  login.py
src/include/controllers/contextmenus/: group.py  management.py
src/include/controllers/dialogs/: authorize.py  avatar_settings.py  directory.py  management.py  menus.py  passwd.py  revision.py  rightmenu.py  rulemanager.py  search.py  view_access_entries.py
src/include/controllers/explorer/: bar.py  itself.py  listview.py  tile.py
src/include/controllers/trash/: view.py
src/include/handlers/: auth.py
src/include/issues/: dropdown.py  gesturedetector.py
src/include/test/: dialog.py
src/include/ui/: constants.py
src/include/util/: avatar.py  batch_operations.py  ca_update.py  changelog_parser.py  connect.py  create.py  download_path.py  hash.py  kdf.py  locale.py  merging.py  passwd.py  path.py  requests.py  transfer.py  tree.py  twofa.py  user.py  userpref.py
tests/: test_register.py
(+112 files in other folders)
