[project]
name = "cfms-client-next"
version = "0.10.0"
description = "The next generation of CFMS client based on Flet framework"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Creeper19472", email = "creeper19472@crpteam.club" }
]
dependencies = [
  "flet>=0.81.0",
  "flet_permission_handler>=0.81.0",
  "flet-open-file @ git+https://github.com/creeper19472/flet-open-file",
  "flet_model @ git+https://github.com/creeper19472/Flet-Model",
  "flet-datatable2>=0.81.0",
  "websockets",
  "pycryptodome",
  "cffi",
  "requests",
  "aiofiles",
  "pyyaml",
  "python-socks",
  "pyotp",
  "pillow",
  "qrcode",
  "flet-code-editor>=0.81.0",
  "cryptography>=46.0.5",
  "flet-material-symbols @ git+https://github.com/creeper19472/flet-material-symbols",
]

[tool.flet]
# Docs: https://flet.dev/docs/publish
org = "org.crpteam"
product = "CFMS Client"
company = "Creeper Team"
copyright = "Copyright (C) 2025-2026 Creeper Team"

[tool.flet.app]
path = "src"

[tool.flet.app.boot_screen]
show = true
message = "Initializing..."

[tool.flet.flutter.pubspec.dependency_overrides]
flet = { git = { url = "https://github.com/flet-dev/flet.git", ref = "main", path = "packages/flet" } }
serious_python = { git = { url = "https://github.com/cfms-dev/serious-python.git", ref = "main", path = "src/serious_python" } }

[tool.flet.android]
min_sdk_version = 24

[tool.flet.template]
url = "gh:cfms-dev/flet-build-template"

[dependency-groups]
dev = [
    "flet[all]>=0.81.0",
]

[tool.uv]
prerelease = "allow"
constraint-dependencies = [
    "binaryornot<0.5.0",
]

[tool.uv.sources]
flet-material-symbols = { git = "https://github.com/creeper19472/flet-material-symbols.git" }

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.81.0"}

[tool.flet.android.permission] # --android-permissions
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.MANAGE_EXTERNAL_STORAGE" = true
"android.permission.MANAGE_MEDIA" = true
"android.permission.REQUEST_INSTALL_PACKAGES" = true
